# VoxPlace

./: .Note.kate-swp  .gitignore  .graphifyignore  CMakeLists.txt  CMakePresets.json  Makefile  Note  README.md  TFE_RECAP_OPTIMISATIONS.md  Tracy ryzen hd 4600 load (0,0) -> x.tracy  build.ps1  imgui.ini  tracy.txt  valgrind.txt  vcpkg.json
.github/workflows/: deploy.yml
dependencies/glad/: glad.h  oldglad.h
include/: Chunk.h  Chunk2.h  ChunkGpuResources.h  ChunkIndirectRenderer.h  ChunkPalette.h  ChunkRenderState.h  ClientChunk.h  ClientChunkMesher.h  DebugOverlay.h  Frustum.h  IChunkGenerator.h  LoginScreen.h  LowResRenderer.h  PasswordHasher.h  Player.h  PlayerColdData.h  PlayerData.h  PlayerHotData.h  PlayerProfile.h  PlayerSessionData.h  PlayerState.h  PlayerTable.h  PlayerUsername.h  SkyblockGenerator.h  TerrainChunkGenerator.h  TerrainColorGradients.h  TerrainGenerator.h  TextureAtlas.h  VoxelChunkData.h  WorldBounds.h  WorldClient.h  WorldProtocol.h  WorldServer.h  WorldTable.h  profiler.h
include/client/core/: ClientApp.h  ClientLaunch.h  ClientProfiler.h  GameState.h  InputSystem.h
include/client/gameplay/: BlockInteractionSystem.h  CameraBoundsSystem.h  ChunkStreamingSystem.h  ClientWorldState.h  ClientWorldSystem.h  MeshBuildSystem.h  PlayerSyncSystem.h
include/client/rendering/: ChunkIndirectRenderer.h  ClientChunkMesher.h  ClientFrameRenderer.h  Crosshair.h  RenderFrameContext.h  RenderSettings.h  Shader.h  WorldRenderer.h
include/client/ui/: ColorPaletteHud.h  CommandChatHud.h  CooldownHud.h  DebugOverlay.h  DebugOverlayBuilder.h  LoginScreen.h  ProfilerWindows.h
include/server/core/: ServerLaunch.h
notes/: Note.md  NoteRandom.txt  REsume.md  ace_of_spades_map_generation_report.md  betterspades_rendering_pipeline.md  drawArray.rdc  glDrawArray.txt  mdi.rdc  mdi.txt  ourcraft_architecture.md  pipeline_esthetique_protahovatsi.md  tips.md
old/include/: LowResRenderer.h
old/src/shader/: 3.3shader.vs  chunk.vs  ps1.vs
scripts/: bench_client_fly.sh  bench_client_fly_vps.sh  bench_client_fly_vps_full_db.sh  bench_client_spawn.sh  bench_spawn.sh  bench_vps_storage.sh  bench_world_persistence.sh  build_chunky.sh  build_native.sh  build_native_asan.sh  build_wasm.sh  clean_all.sh  deploy.sh  drop_all_dbs.sh  lsan_suppressions.txt  run_client_asan.sh  serve_wasm.sh  voxplace.service
src/: Camera.h  CooldownHud.cpp  DebugOverlay.cpp  LoginScreen.cpp  PasswordHasher.cpp  PlayerTable.cpp  Shader.h  WorldClient.cpp  WorldProtocol.cpp  WorldServer.cpp  WorldTable.cpp  config.h  errorReporting.cpp  errorReporting.h  glad.c  main.cpp  main2.cpp  main3.cpp  oldglad.c  profiler.cpp  server_main.cpp
src/client/: main.cpp
src/client/core/: ClientApp.cpp  ClientLaunch.cpp  ClientProfiler.cpp  InputSystem.cpp
src/client/gameplay/: BlockInteractionSystem.cpp  CameraBoundsSystem.cpp  ChunkStreamingSystem.cpp  ClientWorldSystem.cpp  MeshBuildSystem.cpp  PlayerSyncSystem.cpp
src/client/rendering/: ClientFrameRenderer.cpp  WorldRenderer.cpp
src/client/ui/: ColorPaletteHud.cpp  CommandChatHud.cpp  CooldownHud.cpp  DebugOverlay.cpp  DebugOverlayBuilder.cpp  LoginScreen.cpp  ProfilerWindows.cpp
src/server/: main.cpp  world_storage_bench.cpp
src/server/core/: ServerLaunch.cpp
src/shader/: 3.3cube.fs  3.3shader.fs  3.3shader.vs  aabb.vs  chunk.fs  chunk2.fs  chunk2.vs  chunk2_wave.fs  ps1.fs
src/tools/: pregen_main.cpp
